--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
       </div>
       <div class="team">
         <div class="card">
-          <img src="/IMAGES/evos.png" width="30%">
+          <img src="./IMAGES/evos.png" width="30%">
           <div class="intro">
             <h1>Evos</h1>
             <p>
@@ -94,7 +94,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
 
       <div class="team">
         <div class="card">
-          <img src="/IMAGES/Alter.png" width="30%">
+          <img src="./IMAGES/Alter.png" width="30%">
           <div class="intro">
             <h1>Alter Ego</h1>
             <p>
@@ -108,7 +108,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
 
       <div class="team">
         <div class="card">
-          <img src="/IMAGES/RRQ.png" width="30%">
+          <img src="./IMAGES/RRQ.png" width="30%">
           <div class="intro">
             <h1>RRQ</h1>
             <p>
@@ -122,7 +122,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
 
       <div class="team">
         <div class="card">
-          <img src="/IMAGES/Onic.png" width="30%">
+          <img src="./IMAGES/Onic.png" width="30%">
           <div class="intro">
             <h1>Onic</h1>
             <p>
@@ -164,13 +164,13 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
     <div class="isi">
       <div class="social">
         <a href="#instagram">
-          <img src="/SOCIAL_MEDIA/Colorful/instagram.png">
+          <img src="./SOCIAL_MEDIA/Colorful/instagram.png">
         </a>
         <a href="#facebook">
-          <img src="/SOCIAL_MEDIA/Colorful/fb.png">
+          <img src="./SOCIAL_MEDIA/Colorful/fb.png">
         </a>
         <a href="#twitter">
-          <img src="/SOCIAL_MEDIA/Colorful/twitter.png">
+          <img src="./SOCIAL_MEDIA/Colorful/twitter.png">
         </a>
       </div>
 
